<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <!-- our toolbar -->

    <!-- our tablayout to display tabs  -->


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:text="@string/LeadMessage"
        android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/leaderboard"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/submit_area"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:background="@drawable/button_submit_raduis"
            android:text="@string/submit_btn"
            android:textAllCaps="false"
            android:onClick="ProjectSubmit"
            android:textColor="#000"
            android:textSize="15sp" />



    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:text="@string/LeadMessage"
        android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="300dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_below="@id/submit_area"
            app:itemTextColor="#FFFFFF"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/bottom_menu"
            android:layout_alignParentRight="true"
            android:gravity="center_horizontal" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:text="Hello World!"
        android:id="@+id/viewpager"/>




</LinearLayout>